--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://johntrieseverything.github.io/portfolio",
+  "homepage": "https://johnnam1121.github.io/johnnam",
   "name": "portfolio",
   "version": "0.1.0",
   "private": false,
